Optical Hybrid - Update 4.1

--- a/Projects/Optical_Hybrid/SimulationFiles/MMIHybridAssembly.ipynb
+++ b/Projects/Optical_Hybrid/SimulationFiles/MMIHybridAssembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,18 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "import lumapi\n",
-    "sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Optical_Hybrid/SimulationFiles')) #Current directory\n",
+    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "# import lumapi\n",
+    "# sys.path.append(os.path.dirname('/home/trainner/Documentos/Caio/GitReps/Photonics-training/Projects/Optical_Hybrid/SimulationFiles')) #Current directory\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "# spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "# lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "# os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "# sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Optical_Hybrid/SimulationFiles/'))\n",
-    "# spec_win.loader.exec_module(lumapi)\n",
+    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Optical_Hybrid/SimulationFiles/'))\n",
+    "spec_win.loader.exec_module(lumapi)\n",
     "\n",
     "###############################################################\n",
     "# TERMINAL FILE PATH\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,13 +144,16 @@
     "\n",
     "Material = \"Si (Silicon) - Palik\"\n",
     "\n",
-    "BendS = 0  # Without bends (0) , Insert S-bend on ports (1) , Insert 90-bend on ports (2)\n",
+    "BendS = 2  # Without bends (0) , Insert S-bend on ports (1) , Insert 90-bend on ports (2)\n",
+    "SXsp = 4e-6  # S band xspan\n",
+    "SYsp = 4e-6  # S band yspan\n",
+    "B90Radius = 4e-6  # Radius of S-bend \n",
     "\n",
     "\n",
     "# Simulation ----------------------------------\n",
-    "FDTDAccuracy = 5  # FDTD mesh accuracy\n",
+    "FDTDAccuracy = 3  # FDTD mesh accuracy\n",
     "\n",
-    "simTime = 3000e-15  # Simulation time\n",
+    "simTime = 1500e-15  # Simulation time\n",
     "\n",
     "MeshEnable = 0  # Enable/Disable mesh\n",
     "MSBd = {\"dx\":10e-9, \"dy\":4e-9, \"dz\":50e-9}  # Mesh maximum steps Body\n",
@@ -166,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +178,7 @@
        "1.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,14 +244,89 @@
     "hyb.set(\"name\", \"Output waveguide 2\")\n",
     "\n",
     "# Creating the post-tapper bends\n",
+    "if(BendS == 1):\n",
     "\n",
+    "        GenPar = {\"base angle\":90, \"base height\":0.22e-6, \"base width\":0.5e-6,\n",
+    "                  \"x span\":SXsp, \"y span\":SYsp, \"first axis\":\"y\", \"material\":Material}    # General parameter sets\n",
+    "\n",
+    "        hyb.addobject('s_bend_wg')\n",
+    "        hyb.set(GenPar)\n",
+    "        hyb.set({\"name\":\"Input bend 1\", \"rotation 1\":180,\n",
+    "                \"x\":-7e-6, \"y\":0.45e-6, \"z\":0})\n",
+    "\n",
+    "        hyb.addobject('s_bend_wg')\n",
+    "        hyb.set(GenPar)\n",
+    "        hyb.set({\"name\":\"Input bend 2\", \"rotation 1\":0,\n",
+    "                \"x\":-7e-6-SXsp, \"y\":-0.45e-6-SYsp, \"z\":0})\n",
+    "\n",
+    "        hyb.addobject('s_bend_wg')\n",
+    "        hyb.set(GenPar)\n",
+    "        hyb.set({\"name\":\"Output bend 1\", \"rotation 1\":0,\n",
+    "                \"x\":7e-6, \"y\":0.45e-6, \"z\":0})\n",
+    "\n",
+    "        hyb.addobject('s_bend_wg')\n",
+    "        hyb.set(GenPar)\n",
+    "        hyb.set({\"name\":\"Output bend 1\", \"rotation 1\":180,\n",
+    "                \"x\":7e-6+SXsp, \"y\":-0.45e-6-SYsp, \"z\":0})\n",
+    "                \n",
+    "\n",
+    "        RectInsert(-(SXsp+8e-6), 2e-6, SYsp+0.45e-6, 0.5e-6, 0, 220e-9, Material,hyb)\n",
+    "        hyb.set(\"name\", \"Input pos-bend 1\")\n",
+    "        RectInsert(-(SXsp+8e-6), 2e-6, -(SYsp+0.45e-6), 0.5e-6, 0, 220e-9, Material,hyb)\n",
+    "        hyb.set(\"name\", \"Input pos-bend 2\")\n",
+    "        RectInsert(SXsp+8e-6, 2e-6, SYsp+0.45e-6, 0.5e-6, 0, 220e-9, Material,hyb)\n",
+    "        hyb.set(\"name\", \"Output pos-bend 1\")\n",
+    "        RectInsert(SXsp+8e-6, 2e-6, -(SYsp+0.45e-6), 0.5e-6, 0, 220e-9, Material,hyb)\n",
+    "        hyb.set(\"name\", \"Output pos-bend 2\")\n",
+    "\n",
+    "if(BendS == 2):\n",
+    "\n",
+    "        GenPar = {\"base angle\":90, \"base height\":0.22e-6, \"base width\":0.5e-6,\n",
+    "                 \"radius\":B90Radius, \"material\":Material}    # General parameter sets\n",
+    "\n",
+    "        hyb.addobject('90_bend_wg')\n",
+    "        hyb.set(GenPar)\n",
+    "        hyb.set({\"start angle\":180, \"name\":\"Input bend 1\",\n",
+    "                \"x\":-7e-6, \"y\":B90Radius + 0.45e-6, \"z\":0})\n",
+    "\n",
+    "        hyb.addobject('90_bend_wg')\n",
+    "        hyb.set(GenPar)\n",
+    "        hyb.set({\"start angle\":90, \"name\":\"Input bend 2\",\n",
+    "                \"x\":-7e-6, \"y\":-(B90Radius + 0.45e-6), \"z\":0})\n",
+    "\n",
+    "        hyb.addobject('90_bend_wg')\n",
+    "        hyb.set(GenPar)\n",
+    "        hyb.set({\"start angle\":270, \"name\":\"Output bend 1\",\n",
+    "                \"x\":7e-6, \"y\":B90Radius + 0.45e-6, \"z\":0})\n",
+    "\n",
+    "        hyb.addobject('90_bend_wg')\n",
+    "        hyb.set(GenPar)\n",
+    "        hyb.set({\"start angle\":0, \"name\":\"Output bend 2\",\n",
+    "                \"x\":7e-6, \"y\":-(B90Radius + 0.45e-6), \"z\":0})\n",
+    "\n",
+    "        RectInsert(-(B90Radius+7e-6), 0.5e-6, B90Radius + 1.45e-6, 2e-6, 0, 220e-9, Material,hyb)\n",
+    "        hyb.set(\"name\", \"Input pos-bend 1\")\n",
+    "        RectInsert(-(B90Radius+7e-6), 0.5e-6, -(B90Radius + 1.45e-6), 2e-6, 0, 220e-9, Material,hyb)\n",
+    "        hyb.set(\"name\", \"Input pos-bend 2\")\n",
+    "        RectInsert(B90Radius+7e-6, 0.5e-6, B90Radius + 1.45e-6, 2e-6, 0, 220e-9, Material,hyb)\n",
+    "        hyb.set(\"name\", \"Output pos-bend 1\")\n",
+    "        RectInsert(B90Radius+7e-6, 0.5e-6, -(B90Radius + 1.45e-6), 2e-6, 0, 220e-9, Material,hyb)\n",
+    "        hyb.set(\"name\", \"Output pos-bend 2\")\n",
     "\n",
     "\n",
     "# Creating FDTD region\n",
     "hyb.addfdtd()\n",
     "hyb.set({\"x\":0, \"y\":0, \"z\":0,\n",
-    "         \"x span\":OuterBd+InnerBd+2*TLen+1e-6, \"y span\": OuterWid*1.65, \"z span\":3e-6,\n",
+    "         \"z span\":3e-6,\n",
     "         \"simulation time\":simTime, \"mesh accuracy\":FDTDAccuracy})\n",
+    "\n",
+    "if(BendS==0):\n",
+    "         hyb.set({\"x span\":OuterBd+InnerBd+2*TLen+1e-6, \"y span\": OuterWid*1.65}) \n",
+    "if(BendS==1):\n",
+    "         hyb.set({\"x span\":OuterBd+InnerBd+2*TLen+9e-6+ 2*SXsp, \"y span\": 2*(SYsp+1.45e-6)*1.2}) \n",
+    "if(BendS==2):\n",
+    "         hyb.set({\"x span\":OuterBd+InnerBd+2*TLen+9e-6+ 2*B90Radius, \"y span\": 2*(B90Radius+1.45e-6)*1.2}) \n",
+    "\n",
     "if(Buried==1):\n",
     "        hyb.set(\"background material\",\"SiO2 (Glass) - Palik\")\n",
     "\n",
@@ -294,25 +372,71 @@
     "\n",
     "\n",
     "# Creating Ports\n",
-    "hyb.addport()\n",
-    "hyb.set({\"x\":-5e-6, \"y\":0.45e-6, \"z\":0,\n",
-    "         \"y span\":0.75e-6, \"z span\":3e-6,\n",
-    "         \"direction\":\"Forward\"})\n",
+    "if(BendS==0):\n",
+    "        hyb.addport()\n",
+    "        hyb.set({\"x\":-5e-6, \"y\":0.45e-6, \"z\":0,\n",
+    "                \"y span\":0.75e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Forward\"})\n",
     "\n",
-    "hyb.addport()\n",
-    "hyb.set({\"x\":-5e-6, \"y\":-0.45e-6, \"z\":0,\n",
-    "         \"y span\":0.75e-6, \"z span\":3e-6,\n",
-    "         \"direction\":\"Forward\"})\n",
+    "        hyb.addport()\n",
+    "        hyb.set({\"x\":-5e-6, \"y\":-0.45e-6, \"z\":0,\n",
+    "                \"y span\":0.75e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Forward\"})\n",
     "\n",
-    "hyb.addport()\n",
-    "hyb.set({\"x\":5e-6, \"y\":0.45e-6, \"z\":0,\n",
-    "         \"y span\":0.55e-6, \"z span\":3,\n",
-    "         \"direction\":\"Backward\"})\n",
+    "        hyb.addport()\n",
+    "        hyb.set({\"x\":5e-6, \"y\":0.45e-6, \"z\":0,\n",
+    "                \"y span\":0.55e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Backward\"})\n",
     "\n",
-    "hyb.addport()\n",
-    "hyb.set({\"x\":5e-6, \"y\":-0.45e-6, \"z\":0,\n",
-    "         \"y span\":0.55e-6, \"z span\":3e-6,\n",
-    "         \"direction\":\"Backward\"})\n",
+    "        hyb.addport()\n",
+    "        hyb.set({\"x\":5e-6, \"y\":-0.45e-6, \"z\":0,\n",
+    "                \"y span\":0.55e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Backward\"})\n",
+    "\n",
+    "if(BendS==1):\n",
+    "        hyb.addport()\n",
+    "        hyb.set({\"x\":-(SYsp+8e-6), \"y\": SYsp+0.45e-6, \"z\":0,\n",
+    "                \"y span\":4e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Forward\"})\n",
+    "        hyb.addport()\n",
+    "        hyb.set({\"x\":-(SYsp+8e-6), \"y\": -(SYsp+0.45e-6), \"z\":0,\n",
+    "                \"y span\":4e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Forward\"})\n",
+    "\n",
+    "        hyb.addport()\n",
+    "        hyb.set({\"x\":SYsp+8e-6, \"y\": SYsp+0.45e-6, \"z\":0,\n",
+    "                \"y span\":4e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Backward\"})\n",
+    "\n",
+    "        hyb.addport()\n",
+    "        hyb.set({\"x\":SYsp+8e-6, \"y\": -(SYsp+0.45e-6), \"z\":0,\n",
+    "                \"y span\":4e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Backward\"})\n",
+    "\n",
+    "if(BendS==2):\n",
+    "        hyb.addport()\n",
+    "        hyb.set(\"injection axis\",\"y-axis\")\n",
+    "        hyb.set({\"x\":-(B90Radius+7e-6), \"y\": B90Radius+1.45e-6, \"z\":0,\n",
+    "                \"x span\":4e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Backward\"})\n",
+    "\n",
+    "        hyb.addport()\n",
+    "        hyb.set(\"injection axis\",\"y-axis\")\n",
+    "        hyb.set({\"x\":-(B90Radius+7e-6), \"y\": -(B90Radius+1.45e-6), \"z\":0,\n",
+    "                \"x span\":4e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Forward\"})\n",
+    "\n",
+    "        hyb.addport()\n",
+    "        hyb.set(\"injection axis\",\"y-axis\")\n",
+    "        hyb.set({\"x\":B90Radius+7e-6, \"y\": B90Radius+1.45e-6, \"z\":0,\n",
+    "                \"x span\":4e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Backward\"})\n",
+    "\n",
+    "        hyb.addport()\n",
+    "        hyb.set(\"injection axis\",\"y-axis\")\n",
+    "        hyb.set({\"x\":B90Radius+7e-6, \"y\": -(B90Radius+1.45e-6), \"z\":0,\n",
+    "                \"x span\":4e-6, \"z span\":3e-6,\n",
+    "                \"direction\":\"Forward\"})\n",
     "\n",
     "\n",
     "# Editing source settings\n",
@@ -671,7 +795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -685,12 +809,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
    }
   }
  },
