--- a/Projects/MMI/SimulationFiles/CodeMMI.ipynb
+++ b/Projects/MMI/SimulationFiles/CodeMMI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,29 +14,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_c = 1.444\n",
     "n_r = 3.476\n",
-    "lambda_0 = 1550e-9\n",
+    "lambda_0 = 1547.5e-9\n",
     "k_0 = 2*np.pi/lambda_0\n",
-    "W_m = 5.0e-6\n",
+    "W_m = 10.0e-6\n",
     "c0 = 299792458\n",
-    "N = 2"
+    "N = 4 # Number of ports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.156040531990453e-06\n"
+      "1.015578885371305e-05\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,37 +59,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle L_{\\pi} = 59.62~um$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "L_pi_app = 2*np.pi/(neff_app[0] - neff_app[2])/k_0\n",
-    "display(Math('L_{\\pi} = %5.2f~um' %(1e6*L_pi_app)))"
+    "## Lpi calculation methods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle L_{\\pi} = 59.62~um$"
+       "$\\displaystyle L_{\\pi} = 231.67~um$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle L_{\\pi} = 231.67~um$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\dfrac{3}{2}L_{\\pi} = 347.51~um , \\quad \\dfrac{3}{4}L_{\\pi} = 173.76~um , \\quad \\dfrac{3}{8}L_{\\pi} = 86.88~um$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -100,42 +109,156 @@
     }
    ],
    "source": [
+    "# Method 1\n",
+    "L_pi_app = (2*np.pi/(neff_app[0] - neff_app[2]))/k_0\n",
+    "display(Math('L_{\\pi} = %5.2f~um' %(1e6*L_pi_app)))\n",
+    "\n",
+    "# Method 2\n",
     "L_pi_app = n_r * (We**2)/lambda_0\n",
-    "display(Math('L_{\\pi} = %5.2f~um' %(1e6*L_pi_app)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\dfrac{3}{2}L_{\\pi} = 89.43~um , \\quad \\dfrac{3}{4}L_{\\pi} = 44.71~um , \\quad \\dfrac{3}{8}L_{\\pi} = 22.36~um$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "display(Math('L_{\\pi} = %5.2f~um' %(1e6*L_pi_app)))\n",
+    "\n",
     "display(Math('\\dfrac{3}{2}L_{\\pi} = %5.2f~um , \\quad \\dfrac{3}{4}L_{\\pi} = %5.2f~um , \\quad \\dfrac{3}{8}L_{\\pi} = %5.2f~um' \n",
     "%(1e6*3/2*L_pi_app , 1e6*3/4*L_pi_app , 1e6*3/8*L_pi_app)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle W_{wg} =  1.07~um$"
+       "$\\displaystyle L_{\\pi} = 308.90~um$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\dfrac{3}{2}L_{\\pi} = 463.35~um , \\quad \\dfrac{3}{4}L_{\\pi} = 231.67~um , \\quad \\dfrac{3}{8}L_{\\pi} = 115.84~um$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Method 3\n",
+    "L_pi_app = np.pi / (k_0*(neff_app[0]-neff_app[1]))\n",
+    "display(Math('L_{\\pi} = %5.2f~um' %(1e6*L_pi_app)))\n",
+    "\n",
+    "display(Math('\\dfrac{3}{2}L_{\\pi} = %5.2f~um , \\quad \\dfrac{3}{4}L_{\\pi} = %5.2f~um , \\quad \\dfrac{3}{8}L_{\\pi} = %5.2f~um' \n",
+    "%(1e6*3/2*L_pi_app , 1e6*3/4*L_pi_app , 1e6*3/8*L_pi_app)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle L_{\\pi} = 299.49~um$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\dfrac{3}{2}L_{\\pi} = 449.24~um , \\quad \\dfrac{3}{4}L_{\\pi} = 224.62~um , \\quad \\dfrac{3}{8}L_{\\pi} = 112.31~um$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Method 4\n",
+    "L_pi_app = np.pi / (3* np.pi**2 / (2*n_r*k_0*W_m**2))\n",
+    "display(Math('L_{\\pi} = %5.2f~um' %(1e6*L_pi_app)))\n",
+    "\n",
+    "display(Math('\\dfrac{3}{2}L_{\\pi} = %5.2f~um , \\quad \\dfrac{3}{4}L_{\\pi} = %5.2f~um , \\quad \\dfrac{3}{8}L_{\\pi} = %5.2f~um' \n",
+    "%(1e6*3/2*L_pi_app , 1e6*3/4*L_pi_app , 1e6*3/8*L_pi_app)))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MODE simulation Method\n",
+    "\n",
+    "Using MODE calculated parameters (Most correct one so far)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle L_{\\pi} = 244.24~um$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\dfrac{3}{2}L_{\\pi} = 366.36~um , \\quad \\dfrac{3}{4}L_{\\pi} = 183.18~um , \\quad \\dfrac{3}{8}L_{\\pi} = 91.59~um$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "beta0 = 2.830656 * 2*np.pi/(lambda_0)\n",
+    "beta1 = 2.827488 * 2*np.pi/(lambda_0)\n",
+    "\n",
+    "L_pi_app = np.pi / (beta0 - beta1)\n",
+    "display(Math('L_{\\pi} = %5.2f~um' %(1e6*L_pi_app)))\n",
+    "\n",
+    "display(Math('\\dfrac{3}{2}L_{\\pi} = %5.2f~um , \\quad \\dfrac{3}{4}L_{\\pi} = %5.2f~um , \\quad \\dfrac{3}{8}L_{\\pi} = %5.2f~um' \n",
+    "%(1e6*3/2*L_pi_app , 1e6*3/4*L_pi_app , 1e6*3/8*L_pi_app)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle W_{wg} =  1.26~um$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
