--- a/Projects/Hybrid4x4/SimulationFiles/MMI4x4.ipynb
+++ b/Projects/Hybrid4x4/SimulationFiles/MMI4x4.ipynb
@@ -79,14 +79,15 @@
     }
    ],
    "source": [
-    "f = mmi.gdsopen('KlayoutFiles/MMITemplate.gds')"
+    "                f = mmi.gdsopen('KlayoutFiles/MMITemplate.gds')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions"
+    "    ## Functions"
    ]
   },
   {
@@ -438,13 +439,13 @@
     "ax[1].set_xlim(wavelim)\n",
     "#ax[1].set_ylim(0,1)\n",
     "ax[1].grid(True)\n",
-    "ax[1].legend()"
+    "ax[1].legend()                                                                                                                                                                                          "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -458,12 +459,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "01b4b674cd42658a898577618beaa1a387393d7f026f84723d5d405e574265f4"
+    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
    }
   }
  },
