--- a/Projects/MMI/SimulationFiles/MMILumapi.ipynb
+++ b/Projects/MMI/SimulationFiles/MMILumapi.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_26230/1430973055.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
-      "  import imp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import imp\n",
@@ -28,19 +19,19 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "import lumapi\n",
-    "sys.path.append(os.path.dirname('/home/trainner/Documents/GitHub/Photonics-training/Projects/MMI/SimulationFiles')) #Current directory\n",
+    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "# import lumapi\n",
+    "# sys.path.append(os.path.dirname('/home/trainner/Documents/GitHub/Photonics-training/Projects/MMI/SimulationFiles')) #Current directory\n",
     "\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "# spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "# lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "# os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "# sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/MMI/SimulationFiles/'))\n",
-    "# spec_win.loader.exec_module(lumapi)"
+    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/MMI/SimulationFiles/'))\n",
+    "spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
