--- a/Projects/Hybrid4x4/SimulationFiles/MMI4x4.ipynb
+++ b/Projects/Hybrid4x4/SimulationFiles/MMI4x4.ipynb
@@ -45,7 +45,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LumApiError",
+     "evalue": "'Error:  line -1:'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLumApiError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/fotonica04/Documentos/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/fotonica04/Documentos/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m mmi \u001b[39m=\u001b[39m lumapi\u001b[39m.\u001b[39;49mFDTD(filename\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mMMI2x2.fsp\u001b[39;49m\u001b[39m'\u001b[39;49m,hide\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n",
+      "File \u001b[0;32m/opt/lumerical/v221/api/python/lumapi.py:1371\u001b[0m, in \u001b[0;36mFDTD.__init__\u001b[0;34m(self, filename, key, hide, serverArgs, **kwargs)\u001b[0m\n\u001b[1;32m   1370\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, filename\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, key\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, hide\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, serverArgs\u001b[39m=\u001b[39m{}, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m-> 1371\u001b[0m     \u001b[39msuper\u001b[39;49m(FDTD, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mfdtd\u001b[39;49m\u001b[39m'\u001b[39;49m, filename, key, hide, serverArgs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m/opt/lumerical/v221/api/python/lumapi.py:1172\u001b[0m, in \u001b[0;36mLumerical.__init__\u001b[0;34m(self, product, filename, key, hide, serverArgs, **kwargs)\u001b[0m\n\u001b[1;32m   1170\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meval(filename[:\u001b[39m-\u001b[39m\u001b[39m5\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m   1171\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1172\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mload(filename)\n\u001b[1;32m   1174\u001b[0m \u001b[39mif\u001b[39;00m kwargs \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1175\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mproject\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m kwargs:\n",
+      "File \u001b[0;32m/opt/lumerical/v221/api/python/lumapi.py:1153\u001b[0m, in \u001b[0;36mLumerical.__init__.<locals>.<lambda>\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1150\u001b[0m     method \u001b[39m=\u001b[39m (\u001b[39mlambda\u001b[39;00m x: \u001b[39mlambda\u001b[39;00m \u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs:\n\u001b[1;32m   1151\u001b[0m     appCallWithConstructor(\u001b[39mself\u001b[39m, x, args, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs))(name)\n\u001b[1;32m   1152\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1153\u001b[0m     method \u001b[39m=\u001b[39m (\u001b[39mlambda\u001b[39;00m x: \u001b[39mlambda\u001b[39;00m \u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs: appCall(\u001b[39mself\u001b[39;49m, x, args))(name)\n\u001b[1;32m   1154\u001b[0m method\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(name)\n\u001b[1;32m   1155\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
+      "File \u001b[0;32m/opt/lumerical/v221/api/python/lumapi.py:800\u001b[0m, in \u001b[0;36mappCall\u001b[0;34m(self, name, *args)\u001b[0m\n\u001b[1;32m    798\u001b[0m         argLumTypes \u001b[39m=\u001b[39m lumTypes(\u001b[39mlist\u001b[39m(args[\u001b[39m0\u001b[39m]))\n\u001b[1;32m    799\u001b[0m         message \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39m - \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m name \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m arguments were converted to (\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(argLumTypes) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 800\u001b[0m     \u001b[39mraise\u001b[39;00m LumApiError(message)\n\u001b[1;32m    801\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(rvals[\u001b[39m0\u001b[39m], \u001b[39mstr\u001b[39m) \u001b[39mand\u001b[39;00m (rvals[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39md6d8d1b2c083c251\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m    802\u001b[0m     rvals[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[0;31mLumApiError\u001b[0m: 'Error:  line -1:'"
+     ]
+    }
+   ],
    "source": [
     "mmi = lumapi.FDTD(filename='MMI2x2.fsp',hide=False)"
    ]
@@ -445,7 +461,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -459,12 +475,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
+    "hash": "01b4b674cd42658a898577618beaa1a387393d7f026f84723d5d405e574265f4"
    }
   }
  },
